tests/invalid/ontology/relation-intra-target-not-specialization.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if an intra-concept relation where the source concept is a specialization of the target concept
in stead of the other way around is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
    </objecttypes>
    <concepts>
      <concept name="a" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
      <concept name="a.b" description="a" display-name-singular="a" display-name-plural="a" version="1"/>
    </concepts>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" merge="match">
            <property-concept name="a.b" confidence="8" cnp="8"/>
          </property>
          <property name="b" object-type="a" description="a" optional="false" multivalued="false" merge="match">
            <property-concept name="a" confidence="8" cnp="8"/>
          </property>
        </properties>
        <relations>
          <intra property1="a" property2="b" concept1="a.b" concept2="a" directed="false" description="[[a]] linked to [[b]]" confidence="2" predicate="linked"/>
        </relations>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
